--- a/index.html
+++ b/index.html
@@ -3,35 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | BubbleShooter</title>
+    <title>Unity WebGL Player | Knife Hit</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <style>
- #unity-body-style{
-    display: flex;
-    justify-content: center;
-    margin: 0;
-}
- #unity-container{
-    height: 97vh;
-    aspect-ratio: 780 / 1500;
- }
- #unity-canvas{
-    width: 100%;
-    height: 100%;
-    background-color: #030b1e;
- }
-
-    </style>
   </head>
-  <body id="unity-body-style">
+  <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas"></canvas>
+      <canvas id="unity-canvas" width=360 height=640></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Knife Hit</div>
       </div>
     </div>
     <script>
@@ -39,6 +28,8 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -46,36 +37,66 @@
       // Modify or remove this function to customize the visually presented
       // way that non-critical warnings and error messages are presented to the
       // user.
-    
+      function unityShowBanner(msg, type) {
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BubbleBuild.loader.js";
+      var loaderUrl = buildUrl + "/KnifeHit.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BubbleBuild.data",
-        frameworkUrl: buildUrl + "/BubbleBuild.framework.js",
-        codeUrl: buildUrl + "/BubbleBuild.wasm",
+        dataUrl: buildUrl + "/KnifeHit.data",
+        frameworkUrl: buildUrl + "/KnifeHit.framework.js",
+        codeUrl: buildUrl + "/KnifeHit.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "GameHigher",
-        productName: "BubbleShooter",
-        productVersion: "1.0.0",
+        companyName: "HakonaMatata",
+        productName: "Knife Hit",
+        productVersion: "1.0",
+        showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
+      // By default, Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
       // happening inside the engine, and you would instead like to size up
       // the canvas DOM size and WebGL render target sizes yourself.
       // config.matchWebGLToCanvasSize = false;
 
-      // if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-      //   container.className = "unity-mobile";
-      //   // Avoid draining fillrate performance on mobile devices,
-      //   // and default/override low DPI mode on mobile browsers.
-      //   config.devicePixelRatio = 1;
-      // } else {
-      //   canvas.style.width = "360px";
-      //   canvas.style.height = "640px";
-      // }
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+        container.className = "unity-mobile";
+        canvas.className = "unity-mobile";
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
+      } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+
+        canvas.style.width = "360px";
+        canvas.style.height = "640px";
+      }
+
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
@@ -85,7 +106,9 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-        
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
         }).catch((message) => {
           alert(message);
         });
