--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     margin: 0;
 }
  #unity-container{
-    height: 98vh;
-    width: 100%;
+  height: 97vh;
+  aspect-ratio: 780 / 1500;
  }
  #unity-canvas{
     width: 100%;
