--- a/index.html
+++ b/index.html
@@ -74,20 +74,28 @@
       document.body.appendChild(script);
 
       function adjustCanvasSize() {
-        var windowAspect = window.innerWidth / window.innerHeight;
-        var gameAspect = 1080 / 2520; // You can change this to the aspect ratio of your game
-
-        if (windowAspect < gameAspect) {
-          canvas.style.width = window.innerWidth + 'px';
-          canvas.style.height = (window.innerWidth / gameAspect) + 'px';
+        var windowWidth = window.innerWidth;
+        var windowHeight = window.innerHeight;
+        
+        if (windowWidth >= 1080 && (windowHeight == 2400 || windowHeight == 2520 || windowHeight == 2380)) {
+          canvas.style.width = "100%";
+          canvas.style.height = "100%";
         } else {
-          canvas.style.width = (window.innerHeight * gameAspect) + 'px';
-          canvas.style.height = window.innerHeight + 'px';
-        }
+          var windowAspect = windowWidth / windowHeight;
+          var gameAspect = 1080 / 2400; // Adjust this to match your game's aspect ratio
 
-        canvas.style.margin = 'auto';
-        container.style.width = canvas.style.width;
-        container.style.height = canvas.style.height;
+          if (windowAspect < gameAspect) {
+            canvas.style.width = windowWidth + 'px';
+            canvas.style.height = (windowWidth / gameAspect) + 'px';
+          } else {
+            canvas.style.width = (windowHeight * gameAspect) + 'px';
+            canvas.style.height = windowHeight + 'px';
+          }
+
+          canvas.style.margin = 'auto';
+          container.style.width = canvas.style.width;
+          container.style.height = canvas.style.height;
+        }
       }
     </script>
   </body>
