--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | KnifeHit</title>
+    <title>Unity WebGL Player | BubbleShooter</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
- #unity-body-style{
-    display: flex;
-    justify-content: center;
-    margin: 0;
-}
- #unity-container{
-    height: 100vh;
-    width: 100%;
- }
- #unity-canvas{
-    width: 100%;
-    height: 100%;
-    background-color: #030b1e;
- }
-
+      #unity-body-style {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+      }
+      #unity-container {
+        height: 100%;
+        width: 100%;
+      }
+      #unity-canvas {
+        width: 100%;
+        height: 100%;
+        background-color: #030b1e;
+      }
     </style>
   </head>
   <body id="unity-body-style">
@@ -40,14 +43,6 @@
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-    
-
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/KnifeHit.loader.js";
       var config = {
@@ -60,22 +55,6 @@
         productVersion: "1.0",
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-      //   container.className = "unity-mobile";
-      //   // Avoid draining fillrate performance on mobile devices,
-      //   // and default/override low DPI mode on mobile browsers.
-      //   config.devicePixelRatio = 1;
-      // } else {
-      //   canvas.style.width = "360px";
-      //   canvas.style.height = "640px";
-      // }
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
@@ -92,18 +71,28 @@
         });
       };
       document.body.appendChild(script);
-      
+
       function adjustCanvasSize() {
         var windowWidth = window.innerWidth;
         var windowHeight = window.innerHeight;
+        var windowAspect = windowWidth / windowHeight;
+        var gameAspect = 1080 / 2400; // Adjust this to match your game's aspect ratio
 
-        if ((windowWidth === 1080 && (windowHeight === 2400 || windowHeight === 2520 || windowHeight === 2380)) || (windowWidth >= 1080 && (windowHeight >= 2400 && windowHeight <= 2520))) {
+        if (windowWidth === 1080 && (windowHeight === 2400 || windowHeight === 2520 || windowHeight === 2380)) {
           canvas.style.width = "100%";
           canvas.style.height = "100%";
-        } 
-}
+        } else if (windowAspect < gameAspect) {
+          canvas.style.width = windowWidth + 'px';
+          canvas.style.height = (windowWidth / gameAspect) + 'px';
+        } else {
+          canvas.style.width = (windowHeight * gameAspect) + 'px';
+          canvas.style.height = windowHeight + 'px';
+        }
 
-
+        canvas.style.margin = 'auto';
+        container.style.width = canvas.style.width;
+        container.style.height = canvas.style.height;
+      }
     </script>
   </body>
 </html>
